--- a/backend/package.json
+++ b/backend/package.json
@@ -8,13 +8,16 @@
   },
   "dependencies": {
     "bcryptjs": "^2.4.3",
+    "compression": "^1.7.4",
     "cors": "^2.8.5",
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
+    "express-rate-limit": "^7.5.1",
     "jsonwebtoken": "^9.0.1",
     "mongoose": "^7.4.1",
     "multer": "^1.4.5-lts.1",
-    "socket.io": "^4.7.2",
-    "nodemon": "^3.0.1"
+    "nodemon": "^3.0.1",
+    "redis": "^4.6.7",
+    "socket.io": "^4.7.2"
   }
 }
