--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "dev": "concurrently \"npm run server\" \"npm run start\""
   },
   "dependencies": {
-    "concurrently": "^8.2.0"
+    "concurrently": "^8.2.0",
+    "date-fns": "^4.1.0"
   }
 }
